# tinyedm

./: .gitignore  .pdm-python  LICENSE  README.md  index.html  pyproject.toml  train.ipynb  train.py
diffusion/: __init__.py  callback.py  denoiser.py  diffuser.py  edm.py  metric.py  solver.py
diffusion/datamodule/: __init__.py  abstract_datamodule.py
experiments/: train.py
experiments/cifar10/: train.py
experiments/cifar10/conf/: cifar10.yaml
experiments/conf/: cifar10.yaml  imagenet.yaml  mnist.yaml
experiments/mnist/: train.py
experiments/mnist/conf/: mnist.yaml
src/tinyedm/: __init__.py  callback.py  callbacks.py  edm.py  ema.py  generate.py  metric.py  networks.py  solver.py  solvers.py  unet.py  utils.py
src/tinyedm/datamodule/: __init__.py  cifar10datamodule.py  ministdatamodule.py  mnistdatamodule.py  random_datamodule.py
src/tinyedm/datamodules/: __init__.py  abstract_datamodule.py  cifar10datamodule.py  extract_features.py  extract_latents.py  imagenet_datamodule.py  imagenet_latents_datamodule.py  mnistdatamodule.py  random_datamodule.py
tests/: test_deinstantiate.py  test_unet_builder.py  test_weighted_mean_squared_error.py
