[project]
name = "tinyedm"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Wu", email = "yichengw@nvidia.com"},
]
dependencies = [
    "torch>=2.1.2",
    "lightning>=2.1.3",
    "torchvision>=0.16.2",
    "torchmetrics>=1.2.1",
    "Pillow>=10.2.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
