[project]
name = "tinyedm"
version = "0.1.0"
description = ""
authors = [
    {name = "Ethan Wu", email = "yichengw@nvidia.com"},
]
dependencies = [
    "torch>=2.2.0",
    "lightning>=2.2.1",
    "torchvision>=0.17.0",
    "torchmetrics>=1.2.1",
    "Pillow>=10.2.0",
    "pyyaml>=6.0.1",
    "typing-extensions>=4.9.0",
    "diffusers[torch]>=0.27.0",
    "wandb>=0.16.4",
    "hydra-core>=1.3.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
